src/objects/Housing_Application__c.object
<CustomObject>
    <description>Housing Application Records</description>
    <fields>
        <fullName>Adjusted_Total_HH_Liquid_Assets__c</fullName>
        <formula>Total_of_HH_Liq_Assets_excl_Retirement__c - 60000</formula>
        <inlineHelpText>Total Household Liquid Assets (excluding Retirement) - 60,000</inlineHelpText>
        <label>Adjusted Total HH Liquid Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Status_Prior_Value__c</fullName>
        <description>This is a system field. Do not use for reports.</description>
        <label>Application Status Prior Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_of_Preference_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Preference Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Preference_Number__c</fullName>
        <label>Certificate of Preference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_Mortgage_Rent_Amount__c</fullName>
        <label>Current Monthly Mortgage / Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Unit_Size_Value__c</fullName>
        <formula>CASE(TEXT(Desired_Unit_Size_of_Bedrooms__c),
&quot;Studio&quot;,1,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
&quot;6&quot;,6,
&quot;7&quot;,7,
&quot;8&quot;,8,
&quot;9&quot;,9,
1)</formula>
        <label>Desired Unit Size Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Unit_Size_of_Bedrooms__c</fullName>
        <label>Desired Unit Size (# of Bedrooms)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Name__c</fullName>
        <formula>Property_of_Interest__r.Development_Name__c</formula>
        <label>Development Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_any_household_member_own_land__c</fullName>
        <label>Does any household member own land?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_any_member_appear_on_unit_s_title__c</fullName>
        <inlineHelpText>Does any household member appear on title for a housing unit (whether living in it or renting it out)?</inlineHelpText>
        <label>Does any member appear on another title?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_any_member_own_a_business__c</fullName>
        <label>Does any member own a business?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Expiration_Date__c</fullName>
        <label>EAHP Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAHP Certificate Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_any_member_owned_a_unit_last_3_yrs__c</fullName>
        <label>Has any member owned a unit (last 3 yrs)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Account_Name__c</fullName>
        <formula>Household_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Housing Applications</relationshipLabel>
        <relationshipName>Housing_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <label>Household Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pursue</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_App_E_Sign_Timestamp__c</fullName>
        <description>Timestamp indicating when applicant submitted Housing Application with E-Signature checkbox checked.</description>
        <formula>IF ( ( Housing_Application_E_Signed__c == true &amp;&amp; ISPICKVAL(Application_Status__c, &apos;Not Yet Submitted&apos;)), NULL, NOW() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing App E-Sign Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Housing_Application_E_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Applicant checks the e-sig box on the Housing Application.</description>
        <label>Housing Application E-Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Applicant_Learned_About_This_Listing__c</fullName>
        <label>How Applicant Learned About this Listing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOHCD Housing Email Alert System</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Friend/family</fullName>
                </value>
                <value>
                    <fullName>Building Developer Website</fullName>
                </value>
                <value>
                    <fullName>MOCHD Website</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_learn_about_available_units__c</fullName>
        <description>Where did you learn about the available unit(s) for the property you are applying to?</description>
        <inlineHelpText>Where did you learn about the available unit(s) for the property you are applying to?</inlineHelpText>
        <label>How did you learn about available units?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Flyer_Where_Was_the_Flyer_Posted__c</fullName>
        <label>If Flyer, Where Was the Flyer Posted?</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Newspaper_Which_Newspaper__c</fullName>
        <label>If Newspaper, Which Newspaper?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Describe__c</fullName>
        <label>If Other, Please Describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Social_Media_Which_Social_Media__c</fullName>
        <label>If Social Media, Which Social Media?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imputed_Asset_Value__c</fullName>
        <formula>Adjusted_Total_HH_Liquid_Assets__c * 0.1</formula>
        <inlineHelpText>Adjusted Household Liquid Assets x 10%</inlineHelpText>
        <label>Imputed Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Live_Or_Work_in_San_Francisco__c</fullName>
        <label>Live or Work in San Francisco?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lottery_Number__c</fullName>
        <inlineHelpText>Lottery Number assigned to this Housing Application</inlineHelpText>
        <label>Lottery Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Number_re_enter__c</fullName>
        <inlineHelpText>Re-enter the lottery number for this housing application to confirm accuracy.</inlineHelpText>
        <label>Lottery Number (re-enter)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Rank__c</fullName>
        <label>Lottery Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <description>Date that the household moved into the property on this application.</description>
        <inlineHelpText>Date that the household moved into the property on this application.</inlineHelpText>
        <label>Move-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <description>Date that the household moved out of the property on this application.</description>
        <inlineHelpText>Date that the household moved out of the property on this application.</inlineHelpText>
        <label>Move-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Agency_Helping_Applicant_If_Any__c</fullName>
        <label>Name of Agency Helping Applicant, If Any</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Cell_Phone__c</fullName>
        <label>Primary Applicant Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Current_Address__c</fullName>
        <label>Primary Applicant Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Email__c</fullName>
        <label>Primary Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Home_Phone__c</fullName>
        <label>Primary Applicant Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Work_Phone__c</fullName>
        <label>Primary Applicant Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property_of_Interest__r.Property_Address_Marketing__c</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Management_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Management Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Property Management</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Housing Applications (Property Management Account)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management_Co__c</fullName>
        <formula>Property_of_Interest__r.Property_Management_Account__r.Name</formula>
        <label>Property Management Co</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <formula>Property_of_Interest__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Property/Unit of Interest that is associated with this Housing Application.</description>
        <inlineHelpText>The Property/Unit of Interest that is associated with this Housing Application.</inlineHelpText>
        <label>Property of Interest</label>
        <referenceTo>Properties__c</referenceTo>
        <relationshipLabel>Housing Applications</relationshipLabel>
        <relationshipName>Housing_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Disqualification__c</fullName>
        <inlineHelpText>Please enter a Reason for Disqualification if Household Status is &quot;Disqualified&quot;.</inlineHelpText>
        <label>Reason for Disqualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_8_Voucher_for_use_to_rent_unit__c</fullName>
        <description>Will a Section 8 Voucher be used to rent this unit?</description>
        <inlineHelpText>Will a Section 8 Voucher be used to rent this unit?</inlineHelpText>
        <label>Section 8 Voucher for use to rent unit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_AMI__c</fullName>
        <formula>Imputed_Asset_Value__c +  Total_Household_Gross_Annual_Income__c</formula>
        <inlineHelpText>Imputed Asset Value + Total Household Income</inlineHelpText>
        <label>Total AMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Assets_Incl_Retirement__c</fullName>
        <label>Total Household Assets Incl. Retirement</label>
        <summarizedField>Housing_Application_Member__c.Member_s_Grand_Total_Assets__c</summarizedField>
        <summaryForeignKey>Housing_Application_Member__c.Housing_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Household_Gross_Annual_Income__c</fullName>
        <label>Total Household Gross Annual Income</label>
        <summarizedField>Housing_Application_Member__c.Member_s_Grand_Total_Incomes__c</summarizedField>
        <summaryForeignKey>Housing_Application_Member__c.Housing_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Household_Size__c</fullName>
        <label>Total Household Size</label>
        <summaryForeignKey>Housing_Application_Member__c.Housing_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_HH_Liq_Assets_excl_Retirement__c</fullName>
        <formula>Total_of_HH_Liq_Assets_w_o_Retirement__c</formula>
        <inlineHelpText>Subtotal of Household Liquid Assets without Retirement</inlineHelpText>
        <label>Total of HH Liq. Assets excl. Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_HH_Liq_Assets_w_o_Retirement__c</fullName>
        <label>Total of HH Liq. Assets w/o Retirement</label>
        <summarizedField>Housing_Application_Member__c.Member_s_Liquid_Assets_w_o_Retirement__c</summarizedField>
        <summaryForeignKey>Housing_Application_Member__c.Housing_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Size_Alert__c</fullName>
        <formula>IF(Desired_Unit_Size_Value__c &gt; Total_Household_Size__c,

&quot;***ALERT: The number of bedrooms you selected is more than your Total Household Size***&quot;,

&quot;&quot;
)</formula>
        <label>Unit Size Alert</label>
        <type>Text</type>
    </fields>
    <label>Housing Application</label>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>NAME</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Applications</label>
    </listViews>
    <listViews>
        <fullName>Lottery_Information_View</fullName>
        <columns>Property_Address__c</columns>
        <columns>NAME</columns>
        <columns>Household_Account__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>Desired_Unit_Size_of_Bedrooms__c</columns>
        <columns>Live_Or_Work_in_San_Francisco__c</columns>
        <columns>Certificate_of_Preference_Holder__c</columns>
        <columns>EAHP_Certificate_Holder__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Lottery_Number__c</columns>
        <columns>Lottery_Number_re_enter__c</columns>
        <columns>Lottery_Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Lottery Information View</label>
    </listViews>
    <listViews>
        <fullName>Residence_History_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Property_Address__c</columns>
        <columns>Household_Account__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>Move_In_Date__c</columns>
        <columns>Move_Out_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Move_In_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Move_Out_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Residence History View</label>
    </listViews>
    <nameField>
        <displayFormat>HA-{YYYY}{MM}-{0}</displayFormat>
        <label>Housing Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing Applications</pluralLabel>
    <recordTypes>
        <fullName>BMR_Ownership</fullName>
        <active>true</active>
        <description>Housing Application for BMR Ownership</description>
        <label>BMR Ownership</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMR_Rental</fullName>
        <active>true</active>
        <description>Housing Application for BMR Rentals</description>
        <label>BMR Rental</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Disqualification_requires_Disq_Reason</fullName>
        <active>true</active>
        <description>If Household Status is &quot;Disqualified&quot;, Reason for Disqualification must be filled out.</description>
        <errorConditionFormula>AND(ISPICKVAL(Household_Status__c,&quot;Disqualified&quot;),  Reason_for_Disqualification__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Reason_for_Disqualification__c</errorDisplayField>
        <errorMessage>If Household Status is &quot;Disqualified&quot;, Reason for Disqualification must be filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lottery_Numbers_Entered_Do_Not_Match</fullName>
        <active>true</active>
        <description>The entered lottery numbers do not match. Please ensure the &quot;Lottery Number&quot; and &quot;Lottery Number (re-enter)&quot; fields are identical.</description>
        <errorConditionFormula>AND(
(Lottery_Number__c != Lottery_Number_re_enter__c), 
NOT(ISBLANK (Lottery_Number_re_enter__c))
)</errorConditionFormula>
        <errorDisplayField>Application_Status__c</errorDisplayField>
        <errorMessage>The entered lottery numbers do not match. Please ensure the &quot;Lottery Number&quot; and &quot;Lottery Number (re-enter)&quot; fields are identical and the numbers entered are accurate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Lottery_Number_Before_Submit</fullName>
        <active>true</active>
        <description>Lottery numbers cannot be entered before the Housing Application is submitted.</description>
        <errorConditionFormula>ISPICKVAL ( Application_Status__c, &apos;Not Yet Submitted&apos; ) &amp;&amp;
!ISBLANK ( Lottery_Number__c )</errorConditionFormula>
        <errorMessage>Lottery numbers cannot be entered before the Housing Application is submitted.</errorMessage>
    </validationRules>
</CustomObject>